--- a/src/styles/course.css
+++ b/src/styles/course.css
@@ -35,6 +35,7 @@
 
 .rating-bar {
   margin: 20px 0;
+  max-width: 500px;
 }
 
 .rating-bar h2 {
@@ -44,17 +45,12 @@
 .rating-row {
   display: flex;
   align-items: center; 
-  margin: 10px 0; 
+  margin: 10px; 
   cursor: pointer;
 }
 
 .rating-row p {
   margin-left: 20px;
-}
-
-.rating-row span {
-  margin-left: 10px;
-  color: #FFC601;
 }
 
 .rating-row .bar-container {
@@ -103,5 +99,18 @@
   .course-left-column {
     flex: none;
     width: 100%;
+    height: 60vh;
+  }
+}
+
+@media (max-width: 1800px) and (max-height: 600px) {
+  .course-left-column {
+    height: 90vh;
+  }
+}
+
+@media (max-width: 900px) and (max-height: 600px) {
+  .course-left-column {
+    height: 60vh;
   }
 }
