--- a/src/styles/courses.css
+++ b/src/styles/courses.css
@@ -8,12 +8,12 @@
     background-color: #D9D9D9;
 }
 
-.header-title {
+.header-title,
+.header-subtitle {
     text-align: center;
 }
 
 .header-subtitle {
-    text-align: center;
     width: 460px;
 }
 
@@ -66,12 +66,6 @@
     height: 30px;
 }
 
-/* 
-.filter-button-container {}
-.filter-select {}
-.filter-icon {} 
-*/
-
 .course-not-found {
     display: flex;
     align-items: center;
@@ -89,8 +83,8 @@
 .course-list-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 20px; 
-    width: 100%; 
+    gap: 20px;
+    width: 100%;
 }
 
 .course-box {
@@ -105,7 +99,7 @@
 .course-image {
     margin: 10px 0;
     width: 100%;
-    height: 180px;
+    height: 150px;
     background-color: #ECECEC;
     border-radius: 6px;
     cursor: pointer;
@@ -154,7 +148,7 @@
     }
 
     .separator {
-        justify-content: start;
+        justify-content: flex-start;
         padding: 0 60px;
     }
 
