--- a/src/styles/customAppBar.css
+++ b/src/styles/customAppBar.css
@@ -3,8 +3,18 @@
   transition: opacity 0.2s ease;
 }
 
+.nav-button-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .nav-button.active {
   opacity: 1;
+}
+
+.nav-button-container hr {
+  border: 2px solid #D9D9D9;
+  border-radius: 6px;
 }
 
 .toolbar-container {
