--- a/src/styles/course.css
+++ b/src/styles/course.css
@@ -12,15 +12,15 @@
 }
 
 .course-left-column {
-  flex: 7;
-  height: 68vh;
+  flex: 5;
+  max-height: 500px;
   background-color: #D9D9D9;
   border-radius: 6px;
 }
 
 .course-right-column {
   display: flex;
-  flex: 3;
+  flex: 5;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -98,23 +98,5 @@
   .course-columns {
     flex-direction: column;
     gap: 20px;
-  }
-  
-  .course-left-column {
-    flex: none;
-    width: 100%;
-    height: 60vh;
-  }
-}
-
-@media (max-width: 1800px) and (max-height: 600px) {
-  .course-left-column {
-    height: 90vh;
-  }
-}
-
-@media (max-width: 900px) and (max-height: 600px) {
-  .course-left-column {
-    height: 60vh;
   }
 }
