--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -58,11 +58,12 @@
 }
 
 .user-icon {
+    padding: 20px;
+    margin-right: 20px;
     max-width: 120px;
     max-height: 120px;
     background-color: #D9D9D9;
     border-radius: 50%;
-    margin-right: 20px;
 }
 
 .user-info-text {
