--- a/src/styles/course.css
+++ b/src/styles/course.css
@@ -94,6 +94,50 @@
   margin-left: 60px;
 }
 
+.popup-content {
+  animation: fadeIn 0.3s ease-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.popup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.popup-content {
+  padding: 20px;
+  width: 600px;
+  height: 400px;
+  max-width: 80%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.popup-content textarea {
+  margin: 10px 0;
+  padding: 10px;
+  width: 100%;
+  height: 70%;
+  border: 1px solid #D9D9D9;
+  border-radius: 12px;
+}
+
 @media (max-width: 900px) {
   .course-columns {
     flex-direction: column;
